refs #56084 - fix collapsible toggle spacing underneath

--- a/app/assets/stylesheets/fae/modules/tables/_collapsible.scss
+++ b/app/assets/stylesheets/fae/modules/tables/_collapsible.scss
@@ -40,7 +40,7 @@
 
 .collapsible-toggle {
   text-align: right;
-  margin: 0 0 24px;
+  margin: 0 0 $content-buffer;
   cursor: pointer;
   padding-right: 25px;
 
